--- a/styles/global.css
+++ b/styles/global.css
@@ -13,6 +13,7 @@
   /* colors */
   --dark-blue: #1e2128;
   --dark-red: #ff0952;
+  --darker-red: #ff095386;
   --light: #fcfeff;
 }
 body {
@@ -26,9 +27,9 @@ body {
 }
 .wrapper {
   margin-top: 50%;
-  color: var(--light);
 }
 .title {
+  color: var(--light);
   text-align: center;
   margin-bottom: 10%;
   font-family: var(--inter);
@@ -55,6 +56,12 @@ body {
   border-radius: 100px;
   background-color: var(--dark-red);
   box-shadow: 0px 2px 80px rgba(255, 9, 82, 0.25);
+  transition: 200ms;
+}
+#join-now:hover {
+  background-color: var(--darker-red);
+  cursor: pointer;
+  transition: 200ms;
 }
 #join-now span {
   color: var(--light);
@@ -62,4 +69,56 @@ body {
   text-shadow: 2px 2px 4px rgba(30, 33, 40, 0.5);
   font-weight: 500;
   font-size: 1.25em;
+}
+.logreg {
+  margin-top: 30%;
+}
+
+.top {
+  margin-top: 20%;
+}
+.credential-container {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.credential-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 80%;
+  margin: 0 auto 12% auto;
+}
+.credential-wrapper:first-child {
+  margin-top: 20%;
+}
+.credential-input {
+  display: block;
+  width: inherit;
+  height: fit-content;
+  color: var(--light);
+}
+.credential-input input {
+  display: block;
+  width: 100%;
+  height: 50px;
+  border-radius: 0.375em;
+  outline: none;
+  border: none;
+  padding: 1em;
+  font-size: 1em;
+  color: var(--dark-blue);
+  font-family: var(--roboto);
+  font-weight: 300;
+  transition: 100ms;
+}
+.credential-input input:focus {
+  outline: 2px solid var(--dark-red);
+  transition: 100ms;
+}
+.credential-input label {
+  display: inline-block;
+  font-family: var(--roboto);
+  font-weight: 300;
+  margin-bottom: 0.3em;
 }
