--- a/styles/global.css
+++ b/styles/global.css
@@ -40,6 +40,7 @@ body {
   display: block;
   text-align: center;
   font-family: var(--roboto);
+  color: var(--light);
   font-weight: 300;
   font-size: 1.25em;
 }
