--- a/styles/global.css
+++ b/styles/global.css
@@ -134,3 +134,34 @@ body {
 .sign-register-link a:any-link {
   color: var(--dark-red);
 }
+
+#loading {
+  display: inline-block;
+  width: 100px;
+  height: 100px;
+  border: none;
+  outline: none;
+  border-radius: 100px;
+  background-color: var(--dark-red);
+  transition: 200ms;
+  animation: loading-animation 1.5s infinite;
+  animation-fill-mode: both;
+}
+.loading-wrapper {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@keyframes loading-animation {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(10vh);
+  }
+  100% {
+    transform: translateY(0vh);
+  }
+}
