--- a/styles/global.css
+++ b/styles/global.css
@@ -165,3 +165,48 @@ body {
     transform: translateY(0vh);
   }
 }
+
+/* @TODO: responsive design for register */
+@media only screen and (min-width: 700px) {
+  .top {
+    margin-top: 10%;
+    margin-bottom: 0;
+  }
+  .credential-wrapper:first-child {
+    margin-top: 10%;
+  }
+  .logreg {
+    margin-top: 15%;
+  }
+  #join-now {
+    width: 30%;
+  }
+}
+@media only screen and (min-width: 1100px) {
+  .top {
+    margin-top: 5%;
+  }
+  .credential-wrapper:first-child {
+    margin-top: 5%;
+  }
+  .logreg {
+    margin-top: 10%;
+  }
+  .credential-wrapper {
+    width: 60%;
+  }
+  #join-now {
+    width: 20%;
+  }
+}
+@media only screen and (min-width: 1500px) {
+  .credential-wrapper {
+    margin-bottom: 5%;
+  }
+  .logreg {
+    margin-top: 0;
+  }
+  #join-now {
+    width: 10%;
+  }
+}
