--- a/components/Hamburger/Hamburger.module.css
+++ b/components/Hamburger/Hamburger.module.css
@@ -3,32 +3,32 @@
   transition: 200ms;
 }
 .open1 {
-  transform: translate(24px, -5px) rotate(45deg);
+  transform: translate(25px, -5px) rotate(45deg);
 }
 .open3 {
-  transform: translate(-20px, 24px) rotate(-45deg);
+  transform: translate(-19px, 24px) rotate(-45deg);
 }
 .open2 {
   opacity: 0;
 }
 .burger svg {
-  transform: scale(0.7, 0.7);
+  transform: scale(0.8, 0.8);
 }
 .burger {
   width: fit-content;
   height: fit-content;
   opacity: 1;
+  margin-left: 10%;
 }
 .burger:hover {
   cursor: pointer;
 }
 
-/* @TODO: animation */
 .wrapper {
   color: white;
   display: flex;
   position: absolute;
-  width: 90%;
+  width: 80%;
   margin: auto;
   background-color: #fcfeff;
   border-radius: 0.2em;
@@ -43,8 +43,22 @@
   padding: 0.5em 0em;
   width: fit-content;
 }
+.wrapper li a:hover {
+  color: #ff0952;
+}
 .wrapper a:any-link {
   text-decoration: none;
   font-family: "Open Sans", sans-serif;
   color: #1e2128;
+}
+.animate_open {
+  animation: appear 200ms;
+}
+@keyframes appear {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
