--- a/styles/global.css
+++ b/styles/global.css
@@ -154,6 +154,21 @@ body {
   justify-content: center;
   align-items: center;
 }
+
+.logout {
+  display: absolute;
+  margin: auto;
+  color: var(--dark-blue);
+  font-family: var(--inter);
+  width: fit-content;
+  padding: 1em;
+  border-radius: 0.2em;
+  background-color: var(--light);
+}
+.logout:hover {
+  cursor: pointer;
+}
+
 @keyframes loading-animation {
   0% {
     transform: translateY(0);
